--- a/theDefault/src/main/resources/MojiModResources/localization/eng/MojiMod-Augment-Strings.json
+++ b/theDefault/src/main/resources/MojiModResources/localization/eng/MojiMod-Augment-Strings.json
@@ -1,14 +1,10 @@
 {
-  "MojiMod:ExampleAugment": {
+  "MojiMod:AugmentTemplate": {
     "TEXT": ["Prefix", "Suffix", "Description stuff"],
     "EXTRA_TEXT": ["Tooltip"]
   },
-  "MojiMod:Rented": {
-    "TEXT": ["Rented", "", "Reduces cost by #b1. Loses #b2 #yGold when played."],
-    "EXTRA_TEXT": ["Loses %d Gold."]
-  },
-  "MojiMod:AimedMod": {
-    "TEXT": ["Aimed ", "", " NL Deals 33% more damage to enemies with Lock-On."],
-    "EXTRA_TEXT": ["Deals #b33% more damage to enemies with #yLock-On."]
+  "MojiMod:RentedMod": {
+    "TEXT": ["Rented", "", "Reduces cost by #b1. NL Loses #b2 #yGold when played."],
+    "EXTRA_TEXT": [" NL Loses %d Gold."]
   }
 }
