--- a/theDefault/src/main/resources/MojiModResources/localization/eng/MojiMod-Augment-Strings.json
+++ b/theDefault/src/main/resources/MojiModResources/localization/eng/MojiMod-Augment-Strings.json
@@ -3,8 +3,16 @@
     "TEXT": ["Prefix", "Suffix", "Description stuff"],
     "EXTRA_TEXT": ["Tooltip"]
   },
-  "MojiMod:RentedMod": {
-    "TEXT": ["Rented", "", "Reduces cost by #b1. NL Loses #b2 #yGold when played."],
+  "MojiMod:RentalMod": {
+    "TEXT": ["Rental", "", "Reduces cost by #b1. NL Loses #b2 #yGold when played."],
     "EXTRA_TEXT": [" NL Loses %d Gold."]
+  },
+  "MojiMod:EternalMod": {
+    "TEXT": ["Eternal", "", "Increases card values by #b33%. NL Cannot be removed from your deck."],
+    "EXTRA_TEXT": [" NL Cannot be removed from your deck."]
+  },
+  "MojiMod:KnockoffMod": {
+    "TEXT": ["Knockoff", "", "Reduces cost by #b1. NL Cannot be upgraded."],
+    "EXTRA_TEXT": [" NL Cannot be upgraded."]
   }
 }
