--- a/theDefault/src/main/resources/MojiModResources/localization/eng/MojiMod-Augment-Strings.json
+++ b/theDefault/src/main/resources/MojiModResources/localization/eng/MojiMod-Augment-Strings.json
@@ -14,5 +14,21 @@
   "MojiMod:KnockoffMod": {
     "TEXT": ["Knockoff", "", "Reduces cost by #b1. NL Cannot be upgraded."],
     "EXTRA_TEXT": [" NL Cannot be upgraded."]
+  },
+  "MojiMod:EXMod": {
+    "TEXT": ["EX", "", "Increases card values by #b1."],
+    "EXTRA_TEXT": []
+  },
+  "MojiMod:SkimMod": {
+    "TEXT": ["", "Skim", "Draw #b1 card."],
+    "EXTRA_TEXT": [" NL Draw %d card."]
+  },
+  "MojiMod:StrategyMod": {
+    "TEXT": ["", "Strategy", "Draw #b2 cards."],
+    "EXTRA_TEXT": [" NL Draw %d cards."]
+  },
+  "MojiMod:OverpoweredMod": {
+    "TEXT": ["Overpowered", "", "Increases cost by #b1. NL Increases card values by #b100%."],
+    "EXTRA_TEXT": []
   }
 }
