--- a/theDefault/src/main/resources/MojiModResources/localization/zhs/MojiMod-Augment-Strings.json
+++ b/theDefault/src/main/resources/MojiModResources/localization/zhs/MojiMod-Augment-Strings.json
@@ -14,5 +14,21 @@
   "MojiMod:KnockoffMod": {
     "TEXT": ["山寨", "", "本牌耗能减少 #b1。 NL 无法被升级。"],
     "EXTRA_TEXT": [" NL 无法被升级。"]
+  },
+  "MojiMod:EXMod": {
+    "TEXT": ["", " EX", "所有数值增加 #b1。"],
+    "EXTRA_TEXT": []
+  },
+  "MojiMod:SkimMod": {
+    "TEXT": ["", "检索", "抽 #b1 张牌。"],
+    "EXTRA_TEXT": [" NL 抽 %d 张牌。"]
+  },
+  "MojiMod:StrategyMod": {
+    "TEXT": ["", "战略", "抽 #b2 张牌。"],
+    "EXTRA_TEXT": [" NL 抽 %d 张牌。"]
+  },
+  "MojiMod:OverpoweredMod": {
+    "TEXT": ["强力", "", "本牌耗能增加 #b1 。 NL 所有数值增加 #b150% 。"],
+    "EXTRA_TEXT": []
   }
 }
