--- a/theDefault/src/main/resources/MojiModResources/localization/zhs/MojiMod-Augment-Strings.json
+++ b/theDefault/src/main/resources/MojiModResources/localization/zhs/MojiMod-Augment-Strings.json
@@ -28,7 +28,7 @@
     "EXTRA_TEXT": [" NL 抽 %d 张牌。"]
   },
   "MojiMod:OverpoweredMod": {
-    "TEXT": ["强力", "", "本牌耗能增加 #b1 。 NL #y虚无。 NL 所有数值增加 #b167% 。"],
+    "TEXT": ["强力", "", "本牌耗能增加 #b1 。 NL #y虚无。 NL 所有数值增加 #b150% 。"],
     "EXTRA_TEXT": [" 虚无 。 NL "]
   },
   "MojiMod:PeacefulMod": {
@@ -43,5 +43,17 @@
     "TEXT": ["薛定谔的", "", "本牌耗能变为 #b0 。 NL 打出时有 #b50% 概率 #y消耗 。"],
     "EXTRA_TEXT": [" NL 有 %d%% 概率 消耗 。"],
     "NOTE": ["DEPRECATED"]
+  },
+  "MojiMod:BuriedMod": {
+    "TEXT": ["埋藏", "", "#y墓地。 NL 所有数值增加 #b50% 。"],
+    "EXTRA_TEXT": [" 墓地 。 NL "]
+  },
+  "MojiMod:InfusedMod": {
+    "TEXT": ["注能", "", "升级时增加的伤害和 #y格档 提高 #b150% 。"],
+    "EXTRA_TEXT": []
+  },
+  "MojiMod:InspiredMod": {
+    "TEXT": ["灵感", "", "升级时增加的魔法数字提高 #b100% 。"],
+    "EXTRA_TEXT": []
   }
 }
