--- a/theDefault/src/main/resources/MojiModResources/localization/zhs/MojiMod-Augment-Strings.json
+++ b/theDefault/src/main/resources/MojiModResources/localization/zhs/MojiMod-Augment-Strings.json
@@ -8,7 +8,7 @@
     "EXTRA_TEXT": [" NL 失去 %d 金币。"]
   },
   "MojiMod:EternalMod": {
-    "TEXT": ["永恒", "", "所有数值增加 #b33% 。 NL 无法从牌组中移除。"],
+    "TEXT": ["永恒", "", "卡牌数值增加 #b33% 。 NL 无法从牌组中移除。"],
     "EXTRA_TEXT": [" NL 无法从牌组中移除。"]
   },
   "MojiMod:KnockoffMod": {
@@ -16,27 +16,28 @@
     "EXTRA_TEXT": [" NL 无法被升级。"]
   },
   "MojiMod:EXMod": {
-    "TEXT": ["", " EX", "所有数值增加 #b1。"],
-    "EXTRA_TEXT": []
+    "TEXT": ["", " EX", "卡牌数值增加 #b1。"],
+    "EXTRA_TEXT": [],
+    "NOTE": ["DEPRECATED"]
   },
   "MojiMod:SkimMod": {
     "TEXT": ["", "检索", "抽 #b1 张牌。"],
     "EXTRA_TEXT": [" NL 抽 %d 张牌。"]
   },
   "MojiMod:StrategyMod": {
-    "TEXT": ["", "战略", "抽 #b2 张牌。"],
+    "TEXT": ["", "战略", "造成的伤害与获得的 #y格档 减少 #b20% 。 NL 抽 #b2 张牌。"],
     "EXTRA_TEXT": [" NL 抽 %d 张牌。"]
   },
   "MojiMod:OverpoweredMod": {
-    "TEXT": ["强力", "", "本牌耗能增加 #b1 。 NL #y虚无。 NL 所有数值增加 #b150% 。"],
+    "TEXT": ["强力", "", "本牌耗能增加 #b1 。 NL #y虚无。 NL 卡牌数值增加 #b150% 。"],
     "EXTRA_TEXT": [" 虚无 。 NL "]
   },
   "MojiMod:PeacefulMod": {
     "TEXT": ["和平", "", "本牌耗能变为 #b0 。 NL 造成的伤害减少 #b100% 。"],
     "EXTRA_TEXT": []
   },
-  "MojiMod:PeaceMod": {
-    "TEXT": ["宁静", "", "进入 #y平静 。"],
+  "MojiMod:TranquilMod": {
+    "TEXT": ["安宁", "", "进入 #y平静 。"],
     "EXTRA_TEXT": [" NL 进入 平静 。"]
   },
   "MojiMod:SchrodingerMod": {
@@ -45,15 +46,27 @@
     "NOTE": ["DEPRECATED"]
   },
   "MojiMod:BuriedMod": {
-    "TEXT": ["埋藏", "", "#y墓地。 NL 所有数值增加 #b50% 。"],
+    "TEXT": ["埋藏", "", "#y墓地。 NL 卡牌数值增加 #b50% 。"],
     "EXTRA_TEXT": [" 墓地 。 NL "]
   },
-  "MojiMod:InfusedMod": {
-    "TEXT": ["注能", "", "升级时增加的伤害和 #y格档 提高 #b150% 。"],
+  "MojiMod:InspiredMod": {
+    "TEXT": ["灵感", "", "升级时魔法数字额外增加 #b1 。"],
     "EXTRA_TEXT": []
   },
-  "MojiMod:InspiredMod": {
-    "TEXT": ["灵感", "", "升级时增加的魔法数字提高 #b100% 。"],
+  "MojiMod:InfusedMod": {
+    "TEXT": ["注能", "", "升级时造成的伤害额外增加 #b4 。"],
     "EXTRA_TEXT": []
+  },
+  "MojiMod:ReinforcedMod": {
+    "TEXT": ["硬化", "", "升级时获得的 #y格档 额外增加 #b4 。"],
+    "EXTRA_TEXT": []
+  },
+  "MojiMod:PeaceMod": {
+    "TEXT": ["", "宁静", "#y平静 ：抽 #b2 张牌。 NL 否则，进入 #y平静 。"],
+    "EXTRA_TEXT": [" NL 平静 ：抽 %d 张牌。 NL 否则，进入 平静 。"]
+  },
+  "MojiMod:HeatsinksMod": {
+    "TEXT": ["散热", "", "抽 #b2 张牌。"],
+    "EXTRA_TEXT": [" NL 抽 %d 张牌。"]
   }
 }
