--- a/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Augment-Strings.json
+++ b/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Augment-Strings.json
@@ -4,7 +4,7 @@
         "EXTRA_TEXT": ["Tooltip"]
     },
     "mojichimera:RentalMod": {
-        "TEXT": ["租赁", "", "本牌耗能减少 #b1 。 NL 打出时失去 #b10 #y金币 。"],
+        "TEXT": ["租赁", "", "本牌耗能减少 #b1 。 NL 打出时失去 #b6 #y金币 。"],
         "EXTRA_TEXT": [" NL 失去 %d 金币。"]
     },
     "mojichimera:KnockoffMod": {
@@ -48,8 +48,8 @@
         "EXTRA_TEXT": []
     },
     "mojichimera:PeaceMod": {
-        "TEXT": ["", "宁静", "#y平静 ：抽 #b2 张牌。 NL 否则，进入 #y平静 。"],
-        "EXTRA_TEXT": [" NL 平静 ：抽 %d 张牌。 NL 否则，进入 平静 。"]
+        "TEXT": ["", "宁静", "#y平静 ：抽 #b2 张牌。"],
+        "EXTRA_TEXT": [" NL 平静 ：抽 %d 张牌。"]
     },
     "mojichimera:HeatsinksMod": {
         "TEXT": ["散热", "", "抽 #b2 张牌。"],
@@ -60,7 +60,7 @@
         "EXTRA_TEXT": [" NL 能被多次 升级 。"]
     },
     "mojichimera:ChaoticMod": {
-        "TEXT": ["混沌", "", "拾起时，卡牌数值会在 #b50% 到 #b200% 之间随机变化。"],
+        "TEXT": ["混沌", "", "卡牌数值会在原始值的 #b50% 到 #b200% 之间随机变化。"],
         "EXTRA_TEXT": []
     }
 }
