--- a/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Augment-Strings.json
+++ b/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Augment-Strings.json
@@ -60,7 +60,7 @@
         "EXTRA_TEXT": [" NL 能被多次 升级 。"]
     },
     "mojichimera:ChaoticMod": {
-        "TEXT": ["混沌", "", "拾起时，卡牌数值会在 #b50% 到 #b200% 之间随机变化。"],
+        "TEXT": ["混沌", "", "每场战斗开始时，卡牌数值在基础值的 #b50% （向上取整） 和 #b200% 之间随机。"],
         "EXTRA_TEXT": []
     }
 }
