--- a/mojichimera/src/main/resources/mojichimeraResources/localization/eng/mojichimera-Augment-Strings.json
+++ b/mojichimera/src/main/resources/mojichimeraResources/localization/eng/mojichimera-Augment-Strings.json
@@ -73,7 +73,7 @@
         "EXTRA_TEXT": ["Perform X times: NL "]
     },
     "mojichimera:ReplenishMod": {
-        "TEXT": ["Replenish", "", "Draw #b1 card when drawn."],
+        "TEXT": ["Replenishing", "", "Draw #b1 card when drawn."],
         "EXTRA_TEXT": [" NL Draw %d card when drawn."]
     },
     "mojichimera:PocketMod": {
@@ -90,8 +90,16 @@
         "NOTES": ["EXTRA_TEXT[1] is the string to be replaced", "EXTRA_TEXT[2] is the string to replace with"]
     },
     "mojichimera:VirtueMod": {
-        "TEXT": ["Virtue", "", "Reduces each of your debuffs by #b1."],
+        "TEXT": ["Virtuous", "", "Reduces each of your debuffs by #b1."],
         "EXTRA_TEXT": [" NL Reduce each of your debuffs by %d."],
         "NOTES": ["FROM Downfall Hermit:Virtue"]
+    },
+    "mojichimera:DodgeMod": {
+        "TEXT": ["Dodging", "", "Gains #b3 #yAgility this turn."],
+        "EXTRA_TEXT": [" NL Gain %d Agility. NL At the end of this turn, lose %d Agility."]
+    },
+    "mojichimera:FocusedMod": {
+        "TEXT": ["Focused", "", "Gains #b2 #yFocus this turn."],
+        "EXTRA_TEXT": [" NL Gain %d Focus. NL At the end of this turn, lose %d Focus."]
     }
 }
