--- a/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Augment-Strings.json
+++ b/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Augment-Strings.json
@@ -73,7 +73,7 @@
         "EXTRA_TEXT": ["生效X次： NL "]
     },
     "mojichimera:ReplenishMod": {
-        "TEXT": ["装填", "", "抽到本牌时抽 #b1 张牌。"],
+        "TEXT": ["装填", "", "抽到本牌时抽 #b1 张牌。 NL 源于 #b欺诈之地 的同名关键词。"],
         "EXTRA_TEXT": [" NL 抽到本牌时抽 %d 张牌。"]
     },
     "mojichimera:PocketMod": {
@@ -92,10 +92,10 @@
             "消耗 。 NL 消耗 。",
             "消耗 。"
             ],
-        "NOTES": ["[2] is to replace [1] in original text", "[4] is a special case for Purity and Omniscience"]
+        "NOTES": ["[2] is to replace [1] in original text", "[3][4] is a special case for Purity and Omniscience"]
     },
     "mojichimera:VirtueMod": {
-        "TEXT": ["高尚", "", "失去所有负面效果 #b1 层。 NL 灵感源于 #b 崩坠 #y亡命之徒 的同名卡牌。"],
+        "TEXT": ["高尚", "", "失去所有负面效果 #b1 层。 NL 源于 #b 崩坠 #y亡命之徒 的同名卡牌。"],
         "EXTRA_TEXT": [" NL 失去所有负面效果 %d 层。"]
     },
     "mojichimera:DodgeMod": {
@@ -107,11 +107,28 @@
         "EXTRA_TEXT": [" NL 获得 %d 点临时 集中 。"]
     },
     "mojichimera:TwinMod": {
-        "TEXT": ["双重", "", "本牌耗能增加 #b1 。 NL 再打出一次。 NL 灵感源于 #b奇美拉 的同名废弃词条。"],
+        "TEXT": ["双重", "", "本牌耗能增加 #b1 。 NL 再打出一次。 NL 源于 #b奇美拉 的同名废弃词条。"],
         "EXTRA_TEXT": [" NL 再打出一次。"]
     },
     "mojichimera:AfterlifeMod": {
-        "TEXT": ["阴世", "", "#y虚无 。 NL 因 #y虚无 被 #y消耗 时也能触发效果。 NL 灵感源于 #b崩坠 #y六火亡魂 的同名关键词。"],
-        "EXTRA_TEXT": [" 虚无 。 NL 打出或因 虚无 被 消耗 时： NL "]
+        "TEXT": ["阴世", "", "#y虚无 。 NL 因 #y虚无 被 #y消耗 时也能触发效果。 NL 源于 #b崩坠 #y六火亡魂 的同名关键词。"],
+        "EXTRA_TEXT": [" 虚无 。 NL 打出或因 虚无 被 消耗 时： NL "],
+        "NOTES": ["DEPRECATED"]
+    },
+    "mojichimera:EstablishedMod": {
+        "TEXT": ["确立", "", "#y保留 。 NL 被 #y保留 时在本场战斗中的耗能减少 #b1 。"],
+        "EXTRA_TEXT": [" 保留 。 NL ", " NL 被 保留 时耗能减少 %d 。"]
+    },
+    "mojichimera:ReactiveMod": {
+        "TEXT": ["活性", "", "#y保留 。 NL 被 #y保留 时魔法数字增加 #b1 。"],
+        "EXTRA_TEXT": [" 保留 。 NL ", " NL 被 保留 时特殊值增加 %d 。"]
+    },
+    "mojichimera:IndignantMod": {
+        "TEXT": ["义愤", "", "#y愤怒 ： 造成的伤害增加 #b50% 。"],
+        "EXTRA_TEXT": [" NL 愤怒 ： 造成的伤害增加 %d%% 。"]
+    },
+    "mojichimera:RecyclableMod": {
+        "TEXT": ["可回收", "", "#y虚无 。 NL 若被 #y消耗 ，下一回合获得 [E] 。"],
+        "EXTRA_TEXT": [" 虚无 。 NL ", " NL 若被 消耗 ，下一回合获得 [E] 。"]
     }
 }
